
** Changes to accommodate sequence methods

** Added slot annotation to PDInfo, so we can easily find any information about the object.

03-25-2009 - B Carvalho

** Removed lots of unneeded things from NAMESPACE

** Implemented better definitions in NAMESPACE

** Fixed problem with sampleNames dispatching a warning.

04-07-2009 - R Scharpf  committed v1.5.19

** Removed chromosome requirement in setValidity for oligoSnpSet, SnpCallSet, and SnpCopyNumberSet

04-07-2009 - R Scharpf committed v1.5.20

** Changed initialization method for oligoSnpSet and SnpCopyNumberSet

04-16-2009 - B Bcarvalho committed v 1.5.23

** Cleaned up code

05-07-2009 - B Bcarvalho committed v 1.7.1

** Cleaned up code

06-19-2009 - B Carvalho committed v 1.7.5

** Fixed mmSequence

07-17-2009 - B Carvalho committed v 1.7.7

** Extended pmChr to TilingFeatureSet2

07-25-2009 - B Carvalho committed v 1.7.9

** Removed annotation from show method

08-05-2009 - B Carvalho committed v 1.7.10

** Added automatic downloarder/installer pdPkgFromBioC()/requireAnnotation() to be used with annotation packages

** Added requireAnnotation, which is pretty much require() if the pkg is installed... and installs it, without asking, ortherwise.

08-06-2009 - B Carvalho committed v 1.7.10

** For the moment, I don't think pdPkgFromBioC/requireAnnotation need to be exposed in NAMESPACE

09-01-2009 - B Carvalho committed v 1.7.12

** requireAnnotation back in NAMESPACE

09-01-2009 - B Carvalho committed v 1.7.13

** bgindex now sorted

09-27-2009 - B Carvalho committed v 1.7.15

** added documentation to pdPkgFromBioC and requireAnnotation

09-29-2009 - B Carvalho committed v 1.7.16

** svn add documentation

10-28-2009 - R. Scharpf committed v 1.9.1

** export TilingFeatureSet2, QuantificationSet

11-19-2009 - R. Scharpf committed v 1.9.2

** changed definition of SnpCallSetPlus extends SnpSet and SnpQSet

12-01-2009 - R. Scharpf committed v 1.9.7

** removed SnpLevelSet
** oligoSnpSet extends SnpSet