@@ -10,6 +10,8 @@ setGeneric("calls<-", function(object, value) standardGeneric("calls<-"))
 setGeneric("calls", function(object) standardGeneric("calls"))
 setGeneric("confs", function(object) standardGeneric("confs"))
 setGeneric("confs<-", function(object, value) standardGeneric("confs<-"))
+setGeneric("callsConfidence", function(object) standardGeneric("callsConfidence"))
+setGeneric("callsConfidence<-", function(object, value) standardGeneric("callsConfidence<-"))
 setGeneric("copyNumber<-", function(object, value) standardGeneric("copyNumber<-"))
 setGeneric("cnConfidence", function(object) standardGeneric("cnConfidence"))
 setGeneric("cnConfidence<-", function(object, value) standardGeneric("cnConfidence<-"))
@@ -17,25 +19,9 @@ setGeneric("copyNumber", function(object) standardGeneric("copyNumber"))
 setGeneric("chromosome", function(object) standardGeneric("chromosome"))
 setGeneric("chromosome<-", function(object, value) standardGeneric("chromosome<-"))
 setGeneric("db", function(object) standardGeneric("db"))
+setGeneric("kind", function(object) standardGeneric("kind"))
 setGeneric("position", function(object) standardGeneric("position"))
 
 
 setGeneric("genomeBuild", function(object) standardGeneric("genomeBuild"))
 setGeneric("geometry", function(object) standardGeneric("geometry"))
-setGeneric("probeNames", function(object, subset=NULL) standardGeneric("probeNames"))
-setGeneric("bgindex", function(object, ...) standardGeneric("bgindex"))
-setGeneric("pmindex", function(object, ...) standardGeneric("pmindex"))
-setGeneric("mmindex", function(object, ...) standardGeneric("mmindex"))
-setGeneric("kind", function(object) standardGeneric("kind"))
-setGeneric("bgSequence", function(object, ...) standardGeneric("bgSequence"))
-setGeneric("pmSequence", function(object, ...) standardGeneric("pmSequence"))
-setGeneric("mmSequence", function(object) standardGeneric("mmSequence"))
-setGeneric("pmOffset", function(object) standardGeneric("pmOffset"))
-setGeneric("pmChr", function(object) standardGeneric("pmChr"))
-setGeneric("pmFragmentLength", function(object) standardGeneric("pmFragmentLength"))
-setGeneric("pmAllele", function(object) standardGeneric("pmAllele"))
-setGeneric("pmStrand", function(object) standardGeneric("pmStrand"))
-setGeneric("pmPosition", function(object) standardGeneric("pmPosition"))
-setGeneric("getPlatformDesign", function(object) standardGeneric("getPlatformDesign"))
-setGeneric("getX", function(object, type) standardGeneric("getX"))
-setGeneric("getY", function(object, type) standardGeneric("getY"))
